# Search_Widget

./: CMakeLists.txt  Search_Widget.pro  mainwindow.cpp  mainwindow.h
